--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Triangle Tracker</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-
-  <script type="text/javascript">
-
-  </script>
+    <div class="triangle">
+      <h1>Hello there welcome to my webpage where I will determine the type of triangle you have from your input</h1>
+      <button onclick="input()" name="submit">submit</button>
+    </div>
+    <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
