This is commit is to add changes to the body of my html file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
   </head>
   <body>
     <div class="triangle">
-      <h1>Hello there welcome to my webpage where I will determine the type of triangle you have from your input</h1>
+      <h1>Hello there,I am Kim</h1>
+      <h2>My welcome to my webpage where I will determine the type of triangle you have from your input</h2>
+      <p>Interesing I know right!</p>
+      <p>However i will first start by stating the type of triangles that are there:</p>
+      <ul>
+        <li>Equilateral Triangle</li>
+          <p>In this type of triangle all sides are equal.</p>
+        <li>Isosceles Triangle</li>
+          <p>In this type of triangle two sides are equal</p>
+        <li>Scalene Triangle</li>
+          <p>In this type of triangle the sides are not equal</p>
+      </ul>
+      <h3>Click the submit button below to check this amazing concept out</h3>
+      <p>NB: For better results use numerical values only</p>
       <button onclick="input()" name="submit">submit</button>
     </div>
     <script src="js/script.js" charset="utf-8"></script>
