This commit is to add more styles to my index file

--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
   <body>
     <div class="triangle">
       <h1>Hello there,I am Kim</h1>
-      <h2>My welcome to my webpage where I will determine the type of triangle you have from your input</h2>
-      <p>Interesing I know right!</p>
+      <h2>I will determine the type of triangle you have from your input</h2>
+      <p><span class="em">Interesing I know right!</span></p>
       <p>However i will first start by stating the type of triangles that are there:</p>
-      <ul>
-        <li>Equilateral Triangle</li>
+      <ul type="none">
+        <li><span class="bold">Equilateral Triangle</span></li>
           <p>In this type of triangle all sides are equal.</p>
-        <li>Isosceles Triangle</li>
+        <li><span class="bold">Isosceles Triangle</span></li>
           <p>In this type of triangle two sides are equal</p>
-        <li>Scalene Triangle</li>
+        <li><span class="bold">Scalene Triangle</span></li>
           <p>In this type of triangle the sides are not equal</p>
       </ul>
+      <p>For more information on triangles <a href="http://www.mathwarehouse.com/geometry/triangles/triangle-types.php">click here</a></p>
       <h3>Click the submit button below to check this amazing concept out</h3>
       <p>NB: For better results use numerical values only</p>
       <button onclick="input()" name="submit">submit</button>
